@@ -20,7 +20,10 @@
 */
 package it.bancaditalia.oss.sdmx.client.custom;
 
+import java.net.HttpURLConnection;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.List;
 
@@ -35,9 +38,8 @@ import it.bancaditalia.oss.sdmx.exceptions.SdmxResponseException;
 import it.bancaditalia.oss.sdmx.exceptions.SdmxXmlContentException;
 import it.bancaditalia.oss.sdmx.parser.v21.CompactDataParser;
 import it.bancaditalia.oss.sdmx.parser.v21.DataParsingResult;
-import it.bancaditalia.oss.sdmx.parser.v21.RestQueryBuilder;
+import it.bancaditalia.oss.sdmx.parser.v21.Sdmx21Queries;
 import it.bancaditalia.oss.sdmx.util.Configuration;
-import java.net.HttpURLConnection;
 
 /**
  * @author Attilio Mattiocco
@@ -53,14 +55,13 @@ public class EUROSTAT extends RestSdmxClient{
 	private int retries = Integer.parseInt(Configuration.getLateResponseRetries(10));
 	
 
-	public EUROSTAT() throws MalformedURLException{
-		super("Eurostat", new URL(EUROSTAT_PROVIDER), false, false, false);
+	public EUROSTAT() throws URISyntaxException {
+		super("Eurostat", new URI(EUROSTAT_PROVIDER), false, false, false);
 	}
 
 	@Override
-	protected String buildFlowQuery(String dataflow, String agency, String version) throws SdmxException{
-		String query = RestQueryBuilder.getDataflowQuery(endpoint,dataflow, "ESTAT", version);
-		return query;
+	protected URL buildFlowQuery(String dataflow, String agency, String version) throws SdmxException{
+		return Sdmx21Queries.createDataflowQuery(endpoint,dataflow, "ESTAT", version).buildSdmx21Query();
 	}
 	
 	@Override
@@ -88,7 +89,9 @@ public class EUROSTAT extends RestSdmxClient{
 					}
 					
 					try {
-						return runQuery(parser, msg.getUrl(), null).getData();
+						return runQuery(parser, new URL(msg.getUrl()), null).getData();
+					} catch (MalformedURLException e) {
+						logger.info("Late retrieval attempt " + i + " failed with exception " + e.getClass().getSimpleName() + ": " + e.getMessage());
 					} catch (SdmxResponseException e) {
 						logger.info("Late retrieval attempt " + i + " failed with exception " + e.getClass().getSimpleName() + ": " + e.getMessage());
 					}
