@@ -21,6 +21,8 @@
 package it.bancaditalia.oss.sdmx.client.custom;
 
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.HashMap;
 import java.util.Iterator;
@@ -32,10 +34,12 @@ import it.bancaditalia.oss.sdmx.api.DSDIdentifier;
 import it.bancaditalia.oss.sdmx.api.DataFlowStructure;
 import it.bancaditalia.oss.sdmx.api.Dataflow;
 import it.bancaditalia.oss.sdmx.exceptions.SdmxException;
+import it.bancaditalia.oss.sdmx.exceptions.SdmxExceptionFactory;
 import it.bancaditalia.oss.sdmx.exceptions.SdmxXmlContentException;
 import it.bancaditalia.oss.sdmx.parser.v20.DataStructureParser;
-import it.bancaditalia.oss.sdmx.parser.v21.RestQueryBuilder;
+import it.bancaditalia.oss.sdmx.parser.v21.Sdmx21Queries;
 import it.bancaditalia.oss.sdmx.util.Configuration;
+import it.bancaditalia.oss.sdmx.util.RestQueryBuilder;
 
 /**
  * @author Attilio Mattiocco
@@ -45,9 +49,9 @@ public class ILO extends RestSdmx20Client {
 		
 	protected static Logger logger = Configuration.getSdmxLogger();
 	
-	public ILO() throws MalformedURLException{
+	public ILO() throws URISyntaxException {
 		//the ILO providers supports https but it gets errors with java 1.6
-		super("ILO", new URL("http://www.ilo.org/ilostat/sdmx/ws/rest"), false, "application/vnd.sdmx.structurespecificdata+xml;version=2.1", "");
+		super("ILO", new URI("http://www.ilo.org/ilostat/sdmx/ws/rest"), false, "application/vnd.sdmx.structurespecificdata+xml;version=2.1", "");
 	}
 
 	@Override
@@ -59,7 +63,12 @@ public class ILO extends RestSdmx20Client {
 		for (Iterator<String> iterator = collections.keySet().iterator(); iterator.hasNext();) 
 		{
 			String coll = (String) iterator.next();
-			String query = endpoint + "/datastructure" + "/ILO/" + coll + "_ALL_MULTI";
+			URL query;
+			try {
+				query = new RestQueryBuilder(endpoint).addPath("datastructure").addPath("ILO").addPath(coll + "_ALL_MULTI").build();
+			} catch (MalformedURLException e) {
+				throw SdmxExceptionFactory.wrap(e);
+			}
 			List<DataFlowStructure> dfs = runQuery(new DataStructureParser(), query, null);
 			if(dfs.size() > 0){
 				for (Iterator<DataFlowStructure> iterator1 = dfs.iterator(); iterator1.hasNext();) 
@@ -85,8 +94,8 @@ public class ILO extends RestSdmx20Client {
 		return result;
 	}
 	
-	protected String buildFlowQuery(String dataflow, String agency, String version) throws SdmxException{
-		String query = RestQueryBuilder.getDataflowQuery(endpoint,dataflow, "ILO", version);
-		return query;
+	@Override
+	protected URL buildFlowQuery(String dataflow, String agency, String version) throws SdmxException{
+		return Sdmx21Queries.createDataflowQuery(endpoint,dataflow, "ILO", version).buildSdmx21Query();
 	}
 }
