@@ -20,14 +20,18 @@
 */
 package it.bancaditalia.oss.sdmx.client.custom;
 
-import it.bancaditalia.oss.sdmx.api.Dataflow;
-import it.bancaditalia.oss.sdmx.exceptions.SdmxException;
-import it.bancaditalia.oss.sdmx.parser.v21.RestQueryBuilder;
-import it.bancaditalia.oss.sdmx.util.Configuration;
-
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.logging.Logger;
+
+import it.bancaditalia.oss.sdmx.api.Dataflow;
+import it.bancaditalia.oss.sdmx.exceptions.SdmxException;
+import it.bancaditalia.oss.sdmx.exceptions.SdmxExceptionFactory;
+import it.bancaditalia.oss.sdmx.parser.v21.Sdmx21Queries;
+import it.bancaditalia.oss.sdmx.util.Configuration;
+import it.bancaditalia.oss.sdmx.util.RestQueryBuilder;
 
 /**
  * @author Attilio Mattiocco
@@ -37,18 +41,21 @@ public class IMF2 extends RestSdmx20Client{
 		
 	protected static Logger logger = Configuration.getSdmxLogger();
 	
-	public IMF2() throws MalformedURLException{
-		super("IMF2", new URL("http://dataservices.imf.org/REST/SDMX_XML.svc"), false, "", "compact_v2");
+	public IMF2() throws URISyntaxException {
+		super("IMF2", new URI("http://dataservices.imf.org/REST/SDMX_XML.svc"), false, "", "compact_v2");
 	}
 	
 	@Override
-	protected String buildFlowQuery(String flow, String agency, String version) throws SdmxException{
+	protected URL buildFlowQuery(String flow, String agency, String version) throws SdmxException{
 		if( endpoint!=null){
-			String query = endpoint + "/Dataflow";
+			try {
+				return new RestQueryBuilder(endpoint).addPath("Dataflow").build();
+			} catch (MalformedURLException e) {
+				throw SdmxExceptionFactory.wrap(e);
+			}
 //			if(flow != null && !flow.isEmpty() && !flow.equalsIgnoreCase("ALL")){
 //				query += "/" + flow;				
 //			}
-			return query;
 		}
 		else{
 			throw new RuntimeException("Invalid query parameters: endpoint=" + endpoint);
@@ -56,11 +63,14 @@ public class IMF2 extends RestSdmx20Client{
 	}
 	
 	@Override
-	protected String buildDSDQuery(String dsd, String agency, String version, boolean full){
+	protected URL buildDSDQuery(String dsd, String agency, String version, boolean full) throws SdmxException{
 		if( endpoint!=null  && dsd!=null && !dsd.isEmpty()){
 	
-			String query = endpoint + "/DataStructure/" + dsd;
-			return query;
+			try {
+				return new RestQueryBuilder(endpoint).addPath("DataStructure").addPath(dsd).build();
+			} catch (MalformedURLException e) {
+				throw SdmxExceptionFactory.wrap(e);
+			}
 		}
 		else{
 			throw new RuntimeException("Invalid query parameters: dsd=" + dsd + " endpoint=" + endpoint);
@@ -68,18 +78,15 @@ public class IMF2 extends RestSdmx20Client{
 	}
 	
 	@Override
-	protected String buildDataQuery(Dataflow dataflow, String resource, 
+	protected URL buildDataQuery(Dataflow dataflow, String resource, 
 			String startTime, String endTime, 
 			boolean serieskeysonly, String updatedAfter, boolean includeHistory) throws SdmxException{
 		if( endpoint!=null && 
 				dataflow!=null &&
 				resource!=null && !resource.isEmpty()){
 			
-			String query = endpoint + "/CompactData/" + dataflow.getDsdIdentifier().getId() + "/";
-			query += resource ;
-			query += RestQueryBuilder.addParams(startTime, endTime, 
-					serieskeysonly, updatedAfter, includeHistory, format);
-			return query;
+			return ((Sdmx21Queries) new Sdmx21Queries(endpoint).addPath("CompactData").addPath(dataflow.getDsdIdentifier().getId()).addPath(resource)).addParams(startTime, endTime,
+					serieskeysonly, updatedAfter, includeHistory, format).buildSdmx21Query();
 		}
 		else{
 			throw new RuntimeException("Invalid query parameters: dataflow=" + dataflow + " resource=" + resource + " endpoint=" + endpoint);
